...
          title: Text(_item.name),
          actions: [
            if (!_isScannerActive)
              IconButton(
                icon: const Icon(Icons.qr_code_scanner),
                onPressed: _toggleScanner,
                tooltip: 'Сканировать',
              ),
          ],
        ),
        body: _isLoading
            ? const Center(child: LoadingIndicator())
            : _isScannerActive
...
